--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                                                     <div class="pwr-sec-mockup__mockup-wrapper pwr-sec-mockup__mockup-wrapper--center page-center pwr--relative pwr--clearfix" data-pwr-mh="sec-mockup-content-height" style="height: 540px;">
                                                                         <div class="pwr-sec-mockup__mockup pwr-sec-mockup__mockup--desktop-align-right pwr-sec-mockup__mockup--mobile-align-center pwr-sec-mockup__mockup--right pwr-sec-mockup__mockup--not-fw " style="width: 48%;max-width: 950px;" tmp-data-aos="fade-in" tmp-data-aos-delay="50">
                                                                             <div class="pwr-ratio-box" style="padding-bottom: calc(0.8618354216051473 * 100%);">
-                                                                                <img data-sizes="auto" data-maxretina="1.5" class="pwr-sec-mockup__mockup-img lazyautosizes ls-is-cached lazyloaded" alt="{Company}-Header-Mockup-min" style="object-fit: cover;" sizes="576px" src="files/Accolade-Header-Mockup-min.png">
+                                                                                <img data-sizes="auto" data-maxretina="1.5" class="pwr-sec-mockup__mockup-img lazyautosizes ls-is-cached lazyloaded" alt="{Company}-Header-Mockup-min" style="object-fit: cover;" sizes="576px" src="files/img1.jpg">
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -425,7 +425,7 @@
                                                                     <div class="pwr-sec-mockup__mockup-wrapper pwr-sec-mockup__mockup-wrapper--center page-center pwr--relative pwr--clearfix" data-pwr-mh="sec-mockup-content-height" style="height: 639px;">
                                                                         <div class="pwr-sec-mockup__mockup pwr-sec-mockup__mockup--desktop-align-default pwr-sec-mockup__mockup--mobile-align-default pwr-sec-mockup__mockup--right pwr-sec-mockup__mockup--not-fw aos-init" style="width: 55%;max-width: 950px;" data-aos="fade-in" data-aos-delay="50">
                                                                             <div class="pwr-ratio-box" style="padding-bottom: calc(0.9667393675027263 * 100%);">
-                                                                                <img  src="files/1.Accolade_Core_Infographic-min.webp" data-sizes="auto" data-maxretina="1.5" class="lazyload pwr-sec-mockup__mockup-img" alt="1.{Company}_Core_Infographic-min" style="object-fit: cover;">
+                                                                                <img  src="files/img2.jpg" data-sizes="auto" data-maxretina="1.5" class="lazyload pwr-sec-mockup__mockup-img" alt="1.{Company}_Core_Infographic-min" style="object-fit: cover;">
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -534,7 +534,7 @@
                                                                     <div class="pwr-sec-mockup__mockup-wrapper pwr-sec-mockup__mockup-wrapper--center page-center pwr--relative pwr--clearfix" data-pwr-mh="sec-mockup-content-height" style="height: 406px;">
                                                                         <div class="pwr-sec-mockup__mockup pwr-sec-mockup__mockup--desktop-align-default pwr-sec-mockup__mockup--mobile-align-default pwr-sec-mockup__mockup--right pwr-sec-mockup__mockup--not-fw aos-init" style="width: 55%;max-width: 950px;" data-aos="fade-in" data-aos-delay="50">
                                                                             <div class="pwr-ratio-box" style="padding-bottom: calc(0.6143157894736843 * 100%);">
-                                                                                <img src="files/2.Visability.Transparency.Growth_Accolade_Dashboard-min.webp" data-sizes="auto" data-maxretina="1.5" class="lazyload pwr-sec-mockup__mockup-img" alt="2.Visability.Transparency.Growth_{Company}_Dashboard-min" style="object-fit: cover;">
+                                                                                <img src="files/img3.jpg" data-sizes="auto" data-maxretina="1.5" class="lazyload pwr-sec-mockup__mockup-img" alt="2.Visability.Transparency.Growth_{Company}_Dashboard-min" style="object-fit: cover;">
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -571,7 +571,7 @@
                                                                     <div class="pwr-sec-mockup__mockup-wrapper pwr-sec-mockup__mockup-wrapper--center page-center pwr--relative pwr--clearfix" data-pwr-mh="sec-mockup-content-height" style="height: 466px;">
                                                                         <div class="pwr-sec-mockup__mockup pwr-sec-mockup__mockup--desktop-align-default pwr-sec-mockup__mockup--mobile-align-default pwr-sec-mockup__mockup--not-fw aos-init" style="width: 55%;max-width: 950px;" data-aos="fade-in" data-aos-delay="50">
                                                                             <div class="pwr-ratio-box" style="padding-bottom: calc(0.6143157894736843 * 100%);">
-                                                                                <img src="files/4.Focused_on_the_Right_Programs_Accolade_Dashboard-min.webp" data-sizes="auto" data-maxretina="1.5" class="lazyload pwr-sec-mockup__mockup-img" alt="4.Focused_on_the_Right_Programs_{Company}_Dashboard-min" style="object-fit: cover;">
+                                                                                <img src="files/img4.jpg" data-sizes="auto" data-maxretina="1.5" class="lazyload pwr-sec-mockup__mockup-img" alt="4.Focused_on_the_Right_Programs_{Company}_Dashboard-min" style="object-fit: cover;">
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -608,7 +608,7 @@
                                                                     <div class="pwr-sec-mockup__mockup-wrapper pwr-sec-mockup__mockup-wrapper--center page-center pwr--relative pwr--clearfix" data-pwr-mh="sec-mockup-content-height" style="height: 414px;">
                                                                         <div class="pwr-sec-mockup__mockup pwr-sec-mockup__mockup--desktop-align-default pwr-sec-mockup__mockup--mobile-align-default pwr-sec-mockup__mockup--right pwr-sec-mockup__mockup--not-fw aos-init" style="width: 55%;max-width: 950px;" data-aos="fade-in" data-aos-delay="50">
                                                                             <div class="pwr-ratio-box" style="padding-bottom: calc(0.6143157894736843 * 100%);">
-                                                                                <img src="files/3.Govern_Efficiently_Accolade_Dashboard-min.webp" data-sizes="auto" data-maxretina="1.5" class="lazyload pwr-sec-mockup__mockup-img" alt="3.Govern_Efficiently_{Company}_Dashboard-min" style="object-fit: cover;">
+                                                                                <img src="files/img5.jpg" data-sizes="auto" data-maxretina="1.5" class="lazyload pwr-sec-mockup__mockup-img" alt="3.Govern_Efficiently_{Company}_Dashboard-min" style="object-fit: cover;">
                                                                             </div>
                                                                         </div>
                                                                     </div>
