--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix" tmp-data-aos="fade-in" tmp-data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01">
-                                                                                            <a class="pwr-cta_button" href="#" title="Button Join Us">Join Us</a>                    
+                                                                                            <a class="pwr-cta_button" href="#form" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -345,7 +345,7 @@
                                                                             </table>
                                                                         </div>
                                                                         <div class="pwr-adc-content pwr-adc-content--button ">
-                                                                            <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button" href="#" rel="noopener" title="Button Learn More">Download the Study</a></div>
+                                                                            <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button" href="#form" rel="noopener" title="Button Learn More">Download the Study</a></div>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -378,7 +378,7 @@
                                                                             <div class="pwr-rich-text pwr-sec-txt__left aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                 <p>{Company} Core isn’t just another tool—it’s the heartbeat of your innovation strategy. Think about how hard it is to manage data, align teams, and drive meaningful insights in today’s competitive landscape. What if you had a platform that not only streamlined your processes but also empowered your teams to innovate smarter and faster?<br><br></p>
                                                                                 <div class="pwr-adc-content pwr-adc-content--button ">
-                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="#" rel="noopener" title="Button Learn More">Join Us</a></div>
+                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="#form" rel="noopener" title="Button Learn More">Join Us</a></div>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -415,7 +415,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border  ">
-                                                                                            <a class="pwr-cta_button " href="#" title="Button Join Us">Join Us</a>                    
+                                                                                            <a class="pwr-cta_button " href="#form" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -524,7 +524,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border  ">
-                                                                                            <a class="pwr-cta_button " href="#" title="Button Join Us">Join Us</a>                    
+                                                                                            <a class="pwr-cta_button " href="#form" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -561,7 +561,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border  ">
-                                                                                            <a class="pwr-cta_button " href="#" title="Button Join Us">Join Us</a>                    
+                                                                                            <a class="pwr-cta_button " href="#form" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -598,7 +598,7 @@
                                                                                 <div class="pwr-cta-container pwr-sec-mockup__cta-container pwr--clearfix aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                     <div class="pwr--neg-margin-lr-10">
                                                                                         <div class="pwr-cta-container__cta pwr-sec-mockup__cta pwr-cta pwr-cta--regular-border  ">
-                                                                                            <a class="pwr-cta_button" href="#" title="Button Join Us">Join Us</a>                    
+                                                                                            <a class="pwr-cta_button" href="#form" title="Button Join Us">Join Us</a>                    
                                                                                         </div>
                                                                                     </div>
                                                                                 </div>
@@ -765,7 +765,7 @@
                                                                         <div class="pwr-sec-txt__content pwr-sec-txt__content--top  pwr--clearfix ">
                                                                             <div class="pwr-rich-text pwr-sec-txt__left aos-init" data-aos="fade-in" data-aos-delay="50">
                                                                                 <div class="pwr-adc-content pwr-adc-content--button ">
-                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="#" rel="noopener" title="Button Learn More">Discover How</a></div>
+                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="#form" rel="noopener" title="Button Learn More">Discover How</a></div>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -904,7 +904,7 @@
                                                                                     <p>&nbsp;</p>
                                                                                 </div>
                                                                                 <div class="pwr-adc-content pwr-adc-content--button ">
-                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="#" rel="noopener" title="Button Learn More">Join Us</a></div>
+                                                                                    <div class="pwr-adc-content__button pwr-cta pwr-cta--regular-border pwr-cta--custom-size-01"><a class="cta_button " href="#form" rel="noopener" title="Button Learn More">Join Us</a></div>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -1113,7 +1113,7 @@
                                                                         <h3 class="pwr-sec-cta__title pwr-heading-style--default pwr-sec-cta__title--vertical pwr--toc-ignore aos-init" id="ready-to-discover-how-accolade-can-help-drive-growth-innovation-at-your-organization" data-aos="fade-in" data-aos-delay="50">Ready to Discover How {Company} Can Help Drive Growth Innovation at Your Organization?</h3>
                                                                         <div class="pwr-sec-cta__cta-wrapper">
                                                                             <div class="pwr-sec-cta__cta--vertical pwr-cta pwr-cta--regular-border aos-init" data-aos="fade-in" data-aos-delay="50">
-                                                                                <a class="pwr-cta_button" href="#" title="Button Join Us">Join Us</a>                    
+                                                                                <a class="pwr-cta_button" href="#form" title="Button Join Us">Join Us</a>                    
                                                                             </div>
                                                                         </div>
                                                                     </div>
