--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,13 @@
                                 <div class="page-center">
                                     <div class="pwr-footer__content pwr-footer-full__content">
                                         <div class="row-fluid">
-                                            
+                                            <div class="pwr-footer-company-info">
+                                              <div class="pwr-footer__logo pwr-footer__logo--large">
+                                                <a href="index.html">
+                                                  <img src="#" alt="Logo" class="ls-is-cached lazyloaded">
+                                                </a>
+                                              </div>
+                                            </div>
                                             <div class="pwr-footer-full__menu pwr-footer-full__menu--medium-width pwr-footer-full__menu--4col pwr-js-menu">
                                                 <span id="hs_cos_wrapper_menu_186128073909" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_menu"  data-hs-cos-general-type="widget" data-hs-cos-type="menu">
                                                     <div class="hs-menu-wrapper no-flyouts hs-menu-flow-vertical" aria-label="footer navigation" role="navigation" data-sitemap-name="default" id="hs_menu_wrapper_menu_186128073909" data-menu-id="186128073909" "="">
@@ -1203,15 +1209,17 @@
                                                                           Contact Us
                                                                         </a>
                                                                     </li>
-                                                                    <li class="hs-menu-item hs-menu-depth-2 " role="none">
-                                                                      <p style="font-size: 13px !important;">
-                                                                        CIN - U01631KA2010PTC096843 <br>
-                                                                        Address - 2, Western Urban Rd, Davri Nagar,  Siddharth Nagar, Santacruz East, Mumbai, Maharashtra 400055, India <br>
-                                                                        Phone - 0674 2702416 <br>
-                                                                      </p>
-                                                                  </li>
                                                                 </ul>
                                                             </li>
+                                                            <li class="hs-menu-item hs-menu-depth-1 hs-item-has-children" role="none">
+                                                              <ul role="menu" class="hs-menu-children-wrapper">
+                                                                  <li class="hs-menu-item hs-menu-depth-2 " role="none">
+                                                                    CIN - U01631KA2010PTC096843 <br>
+                                                                    Address - 2, Western Urban Rd, Davri Nagar,  Siddharth Nagar, Santacruz East, Mumbai, Maharashtra 400055, India <br>
+                                                                    Phone - 0674 2702416 <br>
+                                                                  </li>
+                                                              </ul>
+                                                          </li>
                                                         </ul>
                                                     </div>
                                                 </span>
