--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                                                     <div class="pwr-sec-mockup__mockup-wrapper pwr-sec-mockup__mockup-wrapper--center page-center pwr--relative pwr--clearfix" data-pwr-mh="sec-mockup-content-height" style="height: 540px;">
                                                                         <div class="pwr-sec-mockup__mockup pwr-sec-mockup__mockup--desktop-align-right pwr-sec-mockup__mockup--mobile-align-center pwr-sec-mockup__mockup--right pwr-sec-mockup__mockup--not-fw " style="width: 48%;max-width: 950px;" tmp-data-aos="fade-in" tmp-data-aos-delay="50">
                                                                             <div class="pwr-ratio-box" style="padding-bottom: calc(0.8618354216051473 * 100%);">
-                                                                                <img data-sizes="auto" data-maxretina="1.5" class="pwr-sec-mockup__mockup-img lazyautosizes ls-is-cached lazyloaded" alt="{Company}-Header-Mockup-min" style="object-fit: cover;" sizes="576px" src="files/img1.jpg">
+                                                                                <img data-sizes="auto" data-maxretina="1.5" class="pwr-sec-mockup__mockup-img lazyautosizes ls-is-cached lazyloaded" alt="{Company}-Header-Mockup-min" style="object-fit: cover; border-radius: 10px;" sizes="576px" src="files/img1.jpg">
                                                                             </div>
                                                                         </div>
                                                                     </div>
