--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us | {Company}</title>
+  <title>About Us | Decor Innıvate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -61,16 +61,16 @@
     <section class="max-w-6xl mx-auto px-4 sm:px-6 py-12">
       <div class="text-center">
         <h1 class="text-4xl md:text-5xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-slate-200/70 to-slate-100/70 pb-4">
-          About {Company}
+          About Decor Innıvate Tech
         </h1>
         <p>
-          At {Company}, we stand at the forefront of technological and financial innovation, dedicated to reshaping the business landscape in today's rapidly evolving digital world. We are not just a company; we are a catalyst for progress, empowering businesses to not only navigate but thrive in the complexities of the modern market. Our expertise lies in crafting bespoke, cutting-edge solutions that seamlessly integrate technology and finance, providing a robust foundation for sustainable growth and unparalleled efficiency.
+          At Decor Innıvate Tech, we stand at the forefront of technological and financial innovation, dedicated to reshaping the business landscape in today's rapidly evolving digital world. We are not just a company; we are a catalyst for progress, empowering businesses to not only navigate but thrive in the complexities of the modern market. Our expertise lies in crafting bespoke, cutting-edge solutions that seamlessly integrate technology and finance, providing a robust foundation for sustainable growth and unparalleled efficiency.
 
-          {Company} was born from a vision to demystify the intricate relationship between technology and finance, making sophisticated tools accessible and impactful for businesses of all sizes.  We understand the challenges businesses face in keeping pace with technological advancements while managing their financial operations effectively.  That's why we've made it our mission to bridge this gap, offering integrated solutions that are both powerful and user-friendly.
+          Decor Innıvate Tech was born from a vision to demystify the intricate relationship between technology and finance, making sophisticated tools accessible and impactful for businesses of all sizes.  We understand the challenges businesses face in keeping pace with technological advancements while managing their financial operations effectively.  That's why we've made it our mission to bridge this gap, offering integrated solutions that are both powerful and user-friendly.
 
           Our commitment to innovation is unwavering. We continually invest in research and development, exploring the frontiers of technology to bring you solutions that are not just current, but future-proof. From AI-driven analytics to blockchain-secured transactions, we leverage the most advanced technologies to create a competitive edge for our clients.  We believe that technology should be an enabler, a force multiplier that amplifies human potential and drives business success.
 
-          But our commitment extends beyond just technology. We are deeply invested in understanding the unique financial needs of each business we partner with.  Our financial solutions are designed to be adaptable and scalable, catering to the specific requirements of diverse industries and business models. We believe in fostering long-term partnerships, working closely with our clients to understand their goals and challenges, and providing tailored strategies that deliver tangible results.  {Company} is more than a service provider; we are your strategic ally in the journey towards digital transformation and financial prosperity.
+          But our commitment extends beyond just technology. We are deeply invested in understanding the unique financial needs of each business we partner with.  Our financial solutions are designed to be adaptable and scalable, catering to the specific requirements of diverse industries and business models. We believe in fostering long-term partnerships, working closely with our clients to understand their goals and challenges, and providing tailored strategies that deliver tangible results.  Decor Innıvate Tech is more than a service provider; we are your strategic ally in the journey towards digital transformation and financial prosperity.
         </p>
       </div>
     </section>
@@ -83,7 +83,7 @@
         <p>
           Our passion for innovation has driven us to consistently develop and refine integrated platforms that are not just tools, but strategic assets for our clients.  We understand that effective communication is the lifeblood of any successful business, which is why our platforms facilitate seamless direct communication, fostering stronger client relationships and enabling rapid response to market dynamics.  Furthermore, we champion the power of automation to liberate businesses from mundane, repetitive tasks, allowing them to focus on strategic initiatives and core competencies.
 
-          Every challenge we have faced has been viewed as an invaluable opportunity to learn and evolve.  The dynamic nature of the technology and finance sectors demands constant adaptation, and {Company} has always been at the forefront of this responsiveness.  We proactively adapt to the ever-changing needs of the market, ensuring that our solutions remain relevant, effective, and ahead of the curve.  With a resolute forward-looking vision, {Company} continues to invest heavily in research and development, pushing the boundaries of what’s possible to provide scalable and customized solutions that meet the ever-evolving demands of the modern business world.
+          Every challenge we have faced has been viewed as an invaluable opportunity to learn and evolve.  The dynamic nature of the technology and finance sectors demands constant adaptation, and Decor Innıvate Tech has always been at the forefront of this responsiveness.  We proactively adapt to the ever-changing needs of the market, ensuring that our solutions remain relevant, effective, and ahead of the curve.  With a resolute forward-looking vision, Decor Innıvate Tech continues to invest heavily in research and development, pushing the boundaries of what’s possible to provide scalable and customized solutions that meet the ever-evolving demands of the modern business world.
         </p>
       </div>
     </section>
@@ -94,18 +94,18 @@
           Mission and Values
         </h2>
         <p>
-          At the heart of {Company} lies a fundamental belief: technology, in its most powerful form, should serve humanity and propel businesses forward in a positive and meaningful way.  Our mission is not simply to provide solutions that optimize processes; it’s to create a ripple effect of positive change, generating a lasting impact on both the community we serve and the environment we share.  We are driven by a profound sense of purpose, striving to create technology that is not only efficient but also ethically sound and socially responsible.
+          At the heart of Decor Innıvate Tech lies a fundamental belief: technology, in its most powerful form, should serve humanity and propel businesses forward in a positive and meaningful way.  Our mission is not simply to provide solutions that optimize processes; it’s to create a ripple effect of positive change, generating a lasting impact on both the community we serve and the environment we share.  We are driven by a profound sense of purpose, striving to create technology that is not only efficient but also ethically sound and socially responsible.
 
           We operate with unwavering integrity, embracing transparency in all our dealings, and channeling our passion into every project we undertake.  Our commitment to excellence is not just a corporate buzzword; it’s ingrained in our DNA. We relentlessly pursue the highest standards, constantly pushing ourselves to exceed the expectations of our clients in every single engagement.  We believe in building trust through consistent performance, clear communication, and a genuine dedication to client success.
 
-          Our core values are the bedrock of {Company}, guiding every decision and action we take:
+          Our core values are the bedrock of Decor Innıvate Tech, guiding every decision and action we take:
 
           * **Innovation:** We are relentless in our pursuit of groundbreaking solutions, constantly exploring new technologies and methodologies to push the boundaries of what’s possible. We foster a culture of creativity and experimentation, encouraging our team to think outside the box and challenge conventional approaches.
           * **Commitment:** We are deeply committed to the success of our clients, going above and beyond to understand their unique needs and deliver solutions that drive tangible results.  This commitment extends to our employees, partners, and the community, fostering a culture of loyalty and mutual support.
           * **Excellence:** We strive for excellence in everything we do, from the design and development of our solutions to the quality of our client service.  We hold ourselves to the highest standards of performance and are constantly seeking ways to improve and refine our processes.
           * **Social Responsibility:** We believe in using technology as a force for good, actively seeking opportunities to contribute positively to society and minimize our environmental impact.  We are committed to ethical business practices and strive to create a more sustainable and inclusive future.
 
-          We are immensely proud to collaborate with companies that share our vision, organizations that are not only driven by profit but also by a desire to build a better future for all. Trust and security are the cornerstones of our client relationships, and we work tirelessly to earn and maintain that trust every day.  Internally, we cultivate an inclusive and dynamic work environment where every team member feels valued, respected, and empowered to contribute their best.  At {Company}, we are not just building technology; we are building lasting partnerships and shaping a better tomorrow, together.
+          We are immensely proud to collaborate with companies that share our vision, organizations that are not only driven by profit but also by a desire to build a better future for all. Trust and security are the cornerstones of our client relationships, and we work tirelessly to earn and maintain that trust every day.  Internally, we cultivate an inclusive and dynamic work environment where every team member feels valued, respected, and empowered to contribute their best.  At Decor Innıvate Tech, we are not just building technology; we are building lasting partnerships and shaping a better tomorrow, together.
         </p>
       </div>
     </section>
@@ -121,7 +121,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © {Company} 2025<span class="text-slate-500"> - </span>All rights reserved.
+              © Decor Innıvate Tech 2025<span class="text-slate-500"> - </span>All rights reserved.
               <br /> <br />
             </div>
             <div class="text-sm text-slate-300">
