--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <div id="pwr-header-fixed" class="pwr-header vanilla pwr-header-fixed pwr--dark pwr-header--dark-on-scroll pwr-header--light-dropdown pwr--page-editor-fix" data-mm-anim-fot-reveal="true" data-mm-anim-slide="true" data-mm-anim-fade="true" style="top: 0px;">
                                 <div class="page-center pwr-header--padding">
                                     <div class="pwr-header-full pwr--clearfix">
-                                        <div class="pwr-header-logo pwr-header-logo--has-sticky"><a href="index.html" aria-label="Back to Home"><img src="#" alt="Logo" class="pwr-header-logo__img" width="200" height="32"></a><a href="index.html" aria-label="Back to Home"><img src="#" alt="Logo" class="pwr-header-logo__img--sticky" width="200" height="32" fetchpriority="low" decoding="async"></a></div>
+                                        <div class="pwr-header-logo pwr-header-logo--has-sticky"><a href="index.html" aria-label="Back to Home"><img src="files/logo.png" alt="Logo" class="pwr-header-logo__img" width="200" height="32"></a><a href="index.html" aria-label="Back to Home"><img src="files/logo.png" alt="Logo" class="pwr-header-logo__img--sticky" width="200" height="32" fetchpriority="low" decoding="async"></a></div>
                                         <div id="pwr-js-header__menu" class="pwr-header__menu pwr-header__menu--narrow-32   pwr-header__menu--dropdown " style="left: 30%;">
                                             <div class="pwr-js-menu">
                                                 <span id="hs_cos_wrapper_menu_184210497186" class="hs_cos_wrapper hs_cos_wrapper_widget hs_cos_wrapper_type_menu"  data-hs-cos-general-type="widget" data-hs-cos-type="menu">
@@ -1189,7 +1189,7 @@
                                             <div class="pwr-footer-company-info">
                                               <div class="pwr-footer__logo pwr-footer__logo--large">
                                                 <a href="index.html">
-                                                  <img src="#" alt="Logo" class="ls-is-cached lazyloaded">
+                                                  <img src="files/logo.png" alt="Logo" class="ls-is-cached lazyloaded" style="width: 75%;">
                                                 </a>
                                               </div>
                                             </div>
